live nvidia steering fix

--- a/combined_code/autobus_live--Waveshare-steer-obstacle-colors.ipynb
+++ b/combined_code/autobus_live--Waveshare-steer-obstacle-colors.ipynb
@@ -16,7 +16,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sat Aug  1 23:58:52 2020 go\n"
+      "Sun Aug  2 20:43:59 2020 go\n"
      ]
     }
    ],
@@ -61,8 +61,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sat Aug  1 23:59:14 2020 best_steering_model_xy--PoolTable400.pth ok\n",
-      "Sat Aug  1 23:59:14 2020 ok\n"
+      "Sun Aug  2 20:44:18 2020 best_steering_model_xy--PoolTable400.pth ok\n",
+      "Sun Aug  2 20:44:18 2020 ok\n"
      ]
     }
    ],
@@ -125,8 +125,8 @@
      "output_type": "stream",
      "text": [
       "check network connection\n",
-      "Sat Aug  1 23:59:19 2020 oba_model ok\n",
-      "Sat Aug  1 23:59:19 2020 ok\n"
+      "Sun Aug  2 20:44:23 2020 oba_model ok\n",
+      "Sun Aug  2 20:44:23 2020 ok\n"
      ]
     }
    ],
@@ -175,14 +175,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sat Aug  1 23:59:19 2020 ok\n"
+      "Sun Aug  2 21:04:50 2020 ok\n"
      ]
     }
    ],
@@ -237,6 +237,7 @@
     "    prob_blocked = float(y.flatten()[0])\n",
     "    status_b.value = str(frame_cnt) + \" obstacle prob: \" + \"{:.2f}\".format(prob_blocked)\n",
     "    if prob_blocked > 0.8:\n",
+    "        status_a.value = str(frame_cnt) + \" obstacle stop\"\n",
     "        robot.left_motor.value = 0\n",
     "        robot.right_motor.value = 0\n",
     "        return\n",
@@ -363,8 +364,9 @@
     "    if not steer_debug:\n",
     "        robot.left_motor.value = max(min(speed_slider.value + steering_slider.value, 1.0), 0.0) *mt\n",
     "        robot.right_motor.value = max(min(speed_slider.value - steering_slider.value, 1.0), 0.0) *mt\n",
-    "        interval = fps #set update interval same as frame rate\n",
-    "        \n",
+    "        interval = 1.0/fps #set update interval same as frame rate\n",
+    "        status_a.value = str(frame_cnt) + \" move\"\n",
+    "\n",
     "    #DDDDDDDDDDDD use AUTOBUS debugging algo ##########\n",
     "    else: \n",
     "        left_motor = max(min(speed_slider.value + steering_slider.value, 1.0), 0.0) \n",
@@ -419,14 +421,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sat Aug  1 23:59:35 2020 ok\n"
+      "Sun Aug  2 21:15:55 2020 ok\n"
      ]
     }
    ],
@@ -438,11 +440,11 @@
     "#2. Steering Gain Control (steering_gain_sloder): If you see JetBot is woblling, you need to reduce ``steering_gain_slider`` till it is smooth\n",
     "#3. Steering Bias control (steering_bias_slider): If you see JetBot is biased towards extreme right or extreme left side of the track, you should control this slider till JetBot start following line or track in the center.  This accounts for motor biases as well as camera offsets\n",
     "#jetbot turns when steering value exceeds threshold (for AUTOBUS steering algo only, not in NVIDIA steering algo)\n",
-    "speed_gain_slider = ipywidgets.FloatSlider(min=0.0, max=0.4, step=0.01, value=0.33, description='speed gain')\n",
-    "steering_gain_slider = ipywidgets.FloatSlider(min=0.0, max=0.4, step=0.01, value=0.33, description='steering gain')\n",
-    "steering_dgain_slider = ipywidgets.FloatSlider(min=0.0, max=0.4, step=0.01, value=0.33, description='steering kd')\n",
-    "steering_bias_slider = ipywidgets.FloatSlider(min=-1.0, max=1.0, step=0.01, value=0, description='steering bias')\n",
-    "turn_thres = ipywidgets.FloatSlider(min=0, max=1.0, step=0.01, value=0.25, description='threshold') #turn threshold\n",
+    "speed_gain_slider = ipywidgets.FloatSlider(min=0, max=1, step=0.01, value=0.33, description='speed gain')\n",
+    "steering_gain_slider = ipywidgets.FloatSlider(min=0, max=1, step=0.01, value=0.33, description='steering gain')\n",
+    "steering_dgain_slider = ipywidgets.FloatSlider(min=0, max=1, step=0.01, value=0.33, description='steering kd')\n",
+    "steering_bias_slider = ipywidgets.FloatSlider(min=-1, max=1, step=0.01, value=0, description='steering bias')\n",
+    "turn_thres = ipywidgets.FloatSlider(min=0, max=1, step=0.01, value=0.25, description='steer thres') #turn threshold\n",
     "\n",
     "#buttons\n",
     "button_layout = ipywidgets.Layout(width='80px', height='35px')\n",
@@ -462,16 +464,16 @@
     "stutter_button.on_click(lambda x: toggle_stutter())\n",
     "\n",
     "#read only sliders\n",
-    "x_slider = ipywidgets.FloatSlider(min=-1.0, max=1.0, value=0, description='x')\n",
-    "y_slider = ipywidgets.FloatSlider(min=0, max=1.0, value=0, orientation='vertical', description='y')\n",
-    "steering_slider = ipywidgets.FloatSlider(min=-1.0, max=1.0, description='steering')\n",
-    "speed_slider = ipywidgets.FloatSlider(min=0, max=1.0, orientation='vertical', description='speed')\n",
+    "x_slider = ipywidgets.FloatSlider(min=-1, max=1, value=0, description='x')\n",
+    "y_slider = ipywidgets.FloatSlider(min=0, max=1, value=0, orientation='vertical', description='y')\n",
+    "steering_slider = ipywidgets.FloatSlider(min=-1, max=1, description='steering')\n",
+    "speed_slider = ipywidgets.FloatSlider(min=0, max=1, orientation='vertical', description='speed')\n",
     "\n",
-    "left_slider = ipywidgets.FloatSlider(min=0, max=1.0, orientation='vertical', description='L nvidia')\n",
-    "right_slider = ipywidgets.FloatSlider(min=0, max=1.0, orientation='vertical', description='R nvidia')\n",
+    "left_slider = ipywidgets.FloatSlider(min=0, max=1, orientation='vertical', description='L nvidia')\n",
+    "right_slider = ipywidgets.FloatSlider(min=0, max=1, orientation='vertical', description='R nvidia')\n",
     "\n",
-    "left_adjusted = ipywidgets.FloatSlider(min=0, max=1.0, orientation='vertical', description='L adjusted')\n",
-    "right_adjusted = ipywidgets.FloatSlider(min=0, max=1.0, orientation='vertical', description='R adjusted')\n",
+    "left_adjusted = ipywidgets.FloatSlider(min=0, max=1, orientation='vertical', description='L adjusted')\n",
+    "right_adjusted = ipywidgets.FloatSlider(min=0, max=1, orientation='vertical', description='R adjusted')\n",
     "\n",
     "#The x and y sliders will display the predicted x, y values.\n",
     "#The steering slider will display our estimated steering value.  Please remember, this value isn't the actual \n",
@@ -485,7 +487,9 @@
     "sliders = widgets.VBox([speed_gain_slider, steering_gain_slider, steering_dgain_slider, steering_bias_slider,turn_thres])\n",
     "buttons = widgets.VBox([run_button,stop_button,camera_button,motor_button,stutter_button])\n",
     "y_sets = ipywidgets.HBox([y_slider,left_slider,right_slider,left_adjusted,right_adjusted])\n",
-    "x_sets = widgets.VBox([x_slider, steering_slider, status_a, status_b, status_c])\n",
+    "x_sets = widgets.VBox([x_slider, steering_slider, ipywidgets.Label(\"a) action\"), status_a,\n",
+    "                       ipywidgets.Label(\"b) obstacle detect\"), status_b, \n",
+    "                       ipywidgets.Label(\"c) color detect\"), status_c])\n",
     "\n",
     "cam_toggle = 1 #enables/disables camera\n",
     "def toggle_camera():\n",
@@ -533,22 +537,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "check camera\n",
-      "check network connection\n",
-      "Sat Aug  1 23:59:49 2020 ok\n"
+      "Sun Aug  2 21:16:22 2020 ok\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "feaf0d7c0927480fb219dd22549350e7",
+       "model_id": "94a318a0f08e4224a548de5a73d5cd89",
        "version_major": 2,
        "version_minor": 0
       },
@@ -562,12 +564,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "590305a35cef4151bca3ff096f81bf59",
+       "model_id": "184241c5ba7844ff970ad7b6d1089317",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(HBox(children=(FloatSlider(value=0.0, description='y', max=1.0, orientation='vertical'), FloatS…"
+       "HBox(children=(HBox(children=(FloatSlider(value=0.12896728515625, description='y', max=1.0, orientation='verti…"
       ]
      },
      "metadata": {},
@@ -586,11 +588,15 @@
     "mt = 0 #starts jetbot without moving\n",
     "stutter = 0 #for debugging\n",
     "turn_thres.value = 0.3 #only used if steer_debug=True\n",
-    "robot.left_motor.alpha = 1 #scales motor speed by this, 1 is no change\n",
-    "robot.right_motor.alpha = 1 \n",
+    "robot.left_motor.alpha = .5 #scales motor speed by this, 1 is no change\n",
+    "robot.right_motor.alpha = .5 \n",
     "frame_cnt = 0\n",
     "\n",
-    "steer_debug = True #False = default NVIDIA algo True = custom\n",
+    "steer_debug = False #False = default NVIDIA algo True = custom\n",
+    "if not steer_debug: #hide not used controls\n",
+    "    turn_thres.layout.visibility = 'hidden'\n",
+    "    left_adjusted.layout.visibility = 'hidden'\n",
+    "    right_adjusted.layout.visibility = 'hidden'\n",
     "\n",
     "execute({'new': camera.value}) #test single image run\n",
     "start() #start jetbot without moving (mt=0, MOTOR button to toggle movement)\n",
@@ -620,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
