--- a/git_push.ipynb
+++ b/git_push.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -16,6 +16,7 @@
       "  (use \"git add <file>...\" to update what will be committed)\n",
       "  (use \"git checkout -- <file>...\" to discard changes in working directory)\n",
       "\n",
+      "\t\u001b[31mmodified:   combined_code/missing_files.md\u001b[m\n",
       "\t\u001b[31mmodified:   git_push.ipynb\u001b[m\n",
       "\n",
       "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,25 +38,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 116f32b] steer obs colors\n",
-      " 2 files changed, 25 insertions(+), 32 deletions(-)\n"
+      "[master 9136556] missing files\n",
+      " 2 files changed, 16 insertions(+), 21 deletions(-)\n"
      ]
     }
    ],
    "source": [
-    "!git commit -m \"steer obs colors\""
+    "!git commit -m \"missing files\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -65,11 +66,11 @@
       "Counting objects: 5, done.\n",
       "Delta compression using up to 4 threads.\n",
       "Compressing objects: 100% (5/5), done.\n",
-      "Writing objects: 100% (5/5), 885 bytes | 885.00 KiB/s, done.\n",
+      "Writing objects: 100% (5/5), 715 bytes | 715.00 KiB/s, done.\n",
       "Total 5 (delta 4), reused 0 (delta 0)\n",
       "remote: Resolving deltas: 100% (4/4), completed with 4 local objects.\u001b[K\n",
       "To https://github.com/loibucket/autobus\n",
-      "   9b89ca0..116f32b  master -> master\n"
+      "   65a0d4f..9136556  master -> master\n"
      ]
     }
    ],
