Added new colors

--- a/combined_code/autobus_live--Waveshare-steer-obstacle-colors.ipynb
+++ b/combined_code/autobus_live--Waveshare-steer-obstacle-colors.ipynb
@@ -237,113 +237,226 @@
     "    prob_blocked = float(y.flatten()[0])\n",
     "    status_b.value = str(frame_cnt) + \" obstacle prob: \" + \"{:.2f}\".format(prob_blocked)\n",
     "    if prob_blocked > 0.8:\n",
-    "        status_a.value = str(frame_cnt) + \" obstacle stop\"\n",
     "        robot.left_motor.value = 0\n",
     "        robot.right_motor.value = 0\n",
     "        return\n",
     "    ##AAAAAAAAAAA jetbot finishes obstacle stop decision ######################\n",
     "    \n",
     "    \n",
-    "    ##BBBBBBBBBB jetbot reads image and makes a station stop decision #########\n",
+    "   ##BBBBBBBBBB jetbot reads image and makes a station stop decision #########\n",
+    "    \"\"\"\n",
+    "        Purpose:\n",
+    "            Detects color of camera frame image.\n",
+    "\n",
+    "        Args:\n",
+    "            None.\n",
+    "\n",
+    "        Returns:\n",
+    "            color_detected: string value of either 'red', 'yellow', 'green', 'purple' or 'other'\n",
+    "\n",
+    "        Raises:\n",
+    "            ConnectionError: If no available port is found.\n",
+    "        \n",
+    "        References:\n",
+    "            (1) To understand colors and the color space with OpenCV read this link:\n",
+    "                - https://www.learnopencv.com/color-spaces-in-opencv-cpp-python/\n",
+    "            (2) To see color detection in OpenCV read this link:\n",
+    "                - https://www.learnopencv.com/invisibility-cloak-using-color-detection-and-segmentation-with-opencv/\n",
+    "            (3) To read more on smoothing images read this link:\n",
+    "                - https://opencv-python-tutroals.readthedocs.io/en/latest/py_tutorials/py_imgproc/py_filtering/py_filtering.html\n",
+    "            (4) To read more on morphological transformations read this link:\n",
+    "                - https://opencv-python-tutroals.readthedocs.io/en/latest/py_tutorials/py_imgproc/py_morphological_ops/py_morphological_ops.html\n",
+    "            (5) To choose upper and lower limits manually follow this link:\n",
+    "                - https://toolstud.io/color/rgb.php\n",
+    "            (6) To understand multiple color detection in real-time using OpenCV read this link:\n",
+    "                - https://www.geeksforgeeks.org/multiple-color-detection-in-real-time-using-python-opencv/\n",
+    "    \"\"\"\n",
+    "    \n",
     "    image_frame = change['new']\n",
+    "    \n",
     "    # extracting out HSV color space values:\n",
     "    # H – Hue (Dominant Wavelength)\n",
     "    # S – Saturation (Purity/Shades of Color)\n",
     "    # V – Value (Intensity)\n",
     "    hsv = cv2.cvtColor(image_frame, cv2.COLOR_BGR2HSV)\n",
+    "    \n",
     "    # adding median blur to image\n",
     "    hsv = cv2.medianBlur(hsv,5)\n",
-    "    # print(hsv)\n",
+    "    \n",
     "    # lower range of red\n",
     "    bttm_lower_red = np.array([0,120,70])\n",
     "    top_lower_red = np.array([10,255,255])\n",
     "    lower_red_mask = cv2.inRange(hsv, bttm_lower_red, top_lower_red)\n",
+    "\n",
     "    # upper range of red\n",
     "    bttm_upper_red = np.array([170,120,70])\n",
     "    top_upper_red = np.array([180,255,255])\n",
     "    upper_red_mask = cv2.inRange(hsv, bttm_upper_red, top_upper_red)\n",
+    "\n",
     "    # generating the final mask to detect red color\n",
     "    red_range_mask = lower_red_mask + upper_red_mask\n",
+    "\n",
     "    # removing noise through opening (erosion followed by dilation)\n",
     "    red_range_mask = cv2.morphologyEx(red_range_mask, cv2.MORPH_OPEN, np.ones((3,3),np.uint8))\n",
+    "\n",
     "    # increasing white region or size of foreground object increases through dilation\n",
     "    red_range_mask = cv2.morphologyEx(red_range_mask, cv2.MORPH_DILATE, np.ones((3,3),np.uint8))\n",
+    "\n",
     "    # detecting if image frame contains red\n",
     "    red_results = cv2.bitwise_and(image_frame, image_frame, mask = red_range_mask)\n",
-    "    # lower range of yellow\n",
-    "    bttm_lower_yellow = np.array([0,120,70]) # TODO: change values\n",
-    "    top_lower_yellow = np.array([10,255,255]) # TODO: change values\n",
-    "    lower_yellow_mask = cv2.inRange(hsv, bttm_lower_yellow, top_lower_yellow)\n",
-    "    # upper range of yellow\n",
-    "    bttm_upper_yellow = np.array([170,120,70]) # TODO: change values\n",
-    "    top_upper_yellow = np.array([180,255,255]) # TODO: change values\n",
-    "    upper_yellow_mask = cv2.inRange(hsv, bttm_upper_yellow, top_upper_yellow)\n",
-    "    # generating the final mask to detect yellow color\n",
-    "    yellow_range_mask = lower_yellow_mask + upper_yellow_mask\n",
+    "\n",
+    "    # calculating ratio of red in image frame and prints output\n",
+    "    red_ratio = (cv2.countNonZero(red_range_mask))/(image_frame.size/3)\n",
+    "    print(\"Amount of red in image:\", np.round(red_ratio*100, 2))\n",
+    "    \n",
+    "    # generating mask for range of yellow\n",
+    "    lower_yellow = np.array([20, 100, 100])\n",
+    "    upper_yellow = np.array([30, 255, 255])\n",
+    "    yellow_range_mask = cv2.inRange(hsv, lower_yellow, upper_yellow)\n",
+    "\n",
     "    # removing noise through opening (erosion followed by dilation)\n",
     "    yellow_range_mask = cv2.morphologyEx(yellow_range_mask, cv2.MORPH_OPEN, np.ones((3,3),np.uint8))\n",
+    "\n",
     "    # increasing white region or size of foreground object increases through dilation\n",
     "    yellow_range_mask = cv2.morphologyEx(yellow_range_mask, cv2.MORPH_DILATE, np.ones((3,3),np.uint8))\n",
+    "\n",
     "    # detecting if image frame contains yellow\n",
     "    yellow_results = cv2.bitwise_and(image_frame, image_frame, mask = yellow_range_mask)\n",
-    "    # lower range of green\n",
-    "    bttm_lower_green = np.array([0,120,70]) # TODO: change values\n",
-    "    top_lower_green = np.array([10,255,255]) # TODO: change values\n",
-    "    lower_green_mask = cv2.inRange(hsv, bttm_lower_green, top_lower_green)\n",
-    "    # upper range of green\n",
-    "    bttm_upper_green = np.array([170,120,70]) # TODO: change values\n",
-    "    top_upper_green = np.array([180,255,255]) # TODO: change values\n",
-    "    upper_green_mask = cv2.inRange(hsv, bttm_upper_green, top_upper_green)\n",
-    "    # generating the final mask to detect green color\n",
-    "    green_range_mask = lower_green_mask + upper_green_mask\n",
+    "\n",
+    "    # calculating ratio of yellow in image frame and prints output\n",
+    "    yellow_ratio = (cv2.countNonZero(yellow_range_mask))/(image_frame.size/3)\n",
+    "    print(\"Amount of yellow in image:\", np.round(yellow_ratio*100, 2))\n",
+    "    \n",
+    "    # generating mask for range of green\n",
+    "    lower_green = np.array([36, 25, 25])\n",
+    "    upper_green = np.array([86, 255,255])\n",
+    "    green_range_mask = cv2.inRange(hsv, lower_green, upper_green)\n",
+    "\n",
     "    # removing noise through opening (erosion followed by dilation)\n",
     "    green_range_mask = cv2.morphologyEx(green_range_mask, cv2.MORPH_OPEN, np.ones((3,3),np.uint8))\n",
+    "\n",
     "    # increasing white region or size of foreground object increases through dilation\n",
     "    green_range_mask = cv2.morphologyEx(green_range_mask, cv2.MORPH_DILATE, np.ones((3,3),np.uint8))\n",
+    "\n",
     "    # detecting if image frame contains green\n",
     "    green_results = cv2.bitwise_and(image_frame, image_frame, mask = green_range_mask)\n",
-    "    # lower range of purple\n",
-    "    bttm_lower_purple = np.array([0,120,70]) # TODO: change values\n",
-    "    top_lower_purple = np.array([10,255,255]) # TODO: change values\n",
-    "    lower_purple_mask = cv2.inRange(hsv, bttm_lower_purple, top_lower_purple)\n",
-    "    # upper range of purple\n",
-    "    bttm_upper_purple = np.array([170,120,70]) # TODO: change values\n",
-    "    top_upper_purple = np.array([180,255,255]) # TODO: change values\n",
-    "    upper_purple_mask = cv2.inRange(hsv, bttm_upper_purple, top_upper_purple)\n",
-    "    # generating the final mask to detect purple color\n",
-    "    purple_range_mask = lower_purple_mask + upper_purple_mask\n",
+    "\n",
+    "    # calculating ratio of green in image frame and prints output\n",
+    "    green_ratio = (cv2.countNonZero(green_range_mask))/(image_frame.size/3)\n",
+    "    print(\"Amount of green in image:\", np.round(green_ratio*100, 2))\n",
+    "    \n",
+    "    # generating mask for range of purple\n",
+    "    lower_purple = np.array([80, 10, 10])\n",
+    "    upper_purple = np.array([120, 255, 255])\n",
+    "    purple_range_mask = cv2.inRange(hsv, lower_purple, upper_purple)\n",
+    "\n",
     "    # removing noise through opening (erosion followed by dilation)\n",
     "    purple_range_mask = cv2.morphologyEx(purple_range_mask, cv2.MORPH_OPEN, np.ones((3,3),np.uint8))\n",
+    "\n",
     "    # increasing white region or size of foreground object increases through dilation\n",
     "    purple_range_mask = cv2.morphologyEx(purple_range_mask, cv2.MORPH_DILATE, np.ones((3,3),np.uint8))\n",
+    "\n",
     "    # detecting if image frame contains purple\n",
     "    purple_results = cv2.bitwise_and(image_frame, image_frame, mask = purple_range_mask)\n",
-    "    if red_results is not None:\n",
+    "\n",
+    "    # calculating ratio of purple in image frame and prints output\n",
+    "    purple_ratio = (cv2.countNonZero(purple_range_mask))/(image_frame.size/3)\n",
+    "    print(\"Amount of purple in image:\", np.round(purple_ratio*100, 2))\n",
+    "    \n",
+    "    # calculating ratio of other colors in image frame and prints output\n",
+    "    rygp_total = (red_ratio + yellow_ratio + green_ratio + purple_ratio)\n",
+    "    other_ratio = (100 - rygp_total)\n",
+    "    print(\"Amount of other colors in image:\", np.round(purple_ratio*100, 2))\n",
+    "    \n",
+    "    # assigning color detected to variable\n",
+    "    if red_ratio >= 5:\n",
+    "\n",
     "        # save detected color value as red\n",
     "        color_detected = 'red'\n",
-    "    elif yellow_results is not None:\n",
+    "\n",
+    "    elif yellow_ratio >= 5:\n",
+    "\n",
     "        # save detected color value as yellow\n",
     "        color_detected = 'yellow'\n",
-    "    elif green_results is not None:\n",
+    "\n",
+    "    elif green_ratio >= 5:\n",
+    "\n",
     "        # save detected color value as green\n",
     "        color_detected = 'green'\n",
-    "    elif purple_results is not None:\n",
+    "\n",
+    "    elif purple_ratio >= 23:\n",
+    "\n",
     "        # save detected color value as purple\n",
     "        color_detected = 'purple'\n",
+    "\n",
     "    else:\n",
+    "\n",
     "        # save detected color value as other\n",
     "        color_detected = 'other'\n",
+    " \n",
     "    # output deteced color value\n",
     "    status_c.value = str(frame_cnt) + \" color detected: \" + color_detected\n",
     "    \n",
-    "    #if color_detected =='red':\n",
-    "    #    robot.left_motor.value = 0\n",
-    "    #    robot.right_motor.value = 0\n",
-    "    #    return\n",
-    "    \n",
-    "    ##BBBBBBBBBB jetbot finishes station stop decision ########################\n",
+    "    ##BBBBBBBBBB jetbot makes decision based on color function ################\n",
+    "    \"\"\"\n",
+    "        Purpose:\n",
+    "            Provides autobus with functions associated with each color it detected.\n",
     "\n",
+    "        Args:\n",
+    "            color_detected: string value of either 'red', 'yellow', 'green', 'purple' or 'other'\n",
+    "\n",
+    "        Returns:\n",
+    "            None.\n",
+    "\n",
+    "        Raises:\n",
+    "            ConnectionError: If no available port is found.\n",
+    "        \n",
+    "        References:\n",
+    "            (1) To understand movement functions of Jetbot Waveshare read this link:\n",
+    "                - https://www.elephantjay.com/blogs/tutorial/266\n",
+    "    \"\"\"\n",
+    "\n",
+    "#     if color_detected == 'red':\n",
+    "        \n",
+    "#         # if red then autobus stops\n",
+    "#         print(\"Color Code Red: Stop detected\")\n",
+    "#         robot.stop()\n",
+    "#         robot.left_motor.value = 0\n",
+    "#         robot.right_motor.value = 0\n",
+    "#         return\n",
     "    \n",
+    "#     elif color_detected == 'yellow':\n",
+    "        \n",
+    "#         # if yellow then autobus slows down\n",
+    "#         print(\"Color Code Yellow: Speed reduction detected\")\n",
+    "#         robot.left_motor.value = (robot.left_motor.value * 0.5)\n",
+    "#         robot.right_motor.value = (robot.right_motor.value  * 0.5)\n",
+    "#         return\n",
+    "\n",
+    "#     elif color_detected == 'green':\n",
+    "        \n",
+    "#         # if green then autobus continues at normal speed\n",
+    "#         print(\"Color Code Green: Continuation at normal speed detected\")\n",
+    "#         robot.left_motor.value = 0.3\n",
+    "#         robot.right_motor.value = 0.3\n",
+    "#         break\n",
+    "        \n",
+    "#     elif color_detected == 'purple':\n",
+    "        \n",
+    "#         # if purple then autobus stops breilfly and starts again\n",
+    "#         print(\"Color Code Purple: Bus stop detected\")\n",
+    "#         robot.stop()\n",
+    "#         robot.left_motor.value = 0\n",
+    "#         robot.right_motor.value = 0\n",
+    "#         robot.sleep(2.0) # 2 seconds wait\n",
+    "#         robot.left_motor.value = 0.3\n",
+    "#         robot.right_motor.value = 0.3\n",
+    "#         break\n",
+    "    \n",
+    "#     elif color_detected == 'other':\n",
+    "#         print(\"No Color Code Detected\")\n",
+    "#         break\n",
+    "\n",
     "    ##CCCCCCCCCCC jetbot reads image and makes a steering decision ############\n",
     "    xy = steer_model(steer_preprocess(image)).detach().float().cpu().numpy().flatten()\n",
     "    x = xy[0]\n",
@@ -364,9 +477,8 @@
     "    if not steer_debug:\n",
     "        robot.left_motor.value = max(min(speed_slider.value + steering_slider.value, 1.0), 0.0) *mt\n",
     "        robot.right_motor.value = max(min(speed_slider.value - steering_slider.value, 1.0), 0.0) *mt\n",
-    "        interval = 1.0/fps #set update interval same as frame rate\n",
-    "        status_a.value = str(frame_cnt) + \" move\"\n",
-    "\n",
+    "        interval = fps #set update interval same as frame rate\n",
+    "        \n",
     "    #DDDDDDDDDDDD use AUTOBUS debugging algo ##########\n",
     "    else: \n",
     "        left_motor = max(min(speed_slider.value + steering_slider.value, 1.0), 0.0) \n",
